--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3053,3 +3053,11 @@ nouislider{
             }
         }        
 }
+
+
+.more-traits-scroll{
+    max-height: 250px;
+    .ps{
+        max-height: 250px;
+    }
+}
