--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1374,7 +1374,8 @@ float: right;
 .sdk-top-down-interface .conversation-container .conversations{
   position: relative;
   top: 0;
-  height: 480px;
+  height: 380px;
+  /* height: 480px; */
   overflow-x: hidden;
   background: #fff;
 }
@@ -1409,7 +1410,8 @@ float: right;
 
 .sdk-top-down-interface .conversation-container .conversations .search-container{
   bottom: 0px !important;
-  width:100% !important
+  width:100% !important;
+    left: 0px !important;
 }
 .sdk-top-down-interface .conversation-container .conversations .search-container.conversation{
   box-shadow: none !important;
@@ -2037,6 +2039,39 @@ a{
 }
 /*style="color :searchConfig.searchBarPlaceholderTextColor !important;"*/
 
-.sdk-top-down-interface .top-down-search-background-div .topdown-search-main-container .search-input-box .search-box-container-data .cancel-search {
+ .topdown-search-main-container .search-input-box .search-box-container-data .cancel-search {
   top: -30px;
+}
+
+.sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container .action-content .action-btns{
+  margin: 0 18px;
+  background: #E7F1FF;
+  border: 1px solid #85B7FE;
+  border-radius: 4px;
+  color: #0D6EFD;
+  max-width: 180px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  line-height: 28px;
+  text-align: center;
+  display: inline-block;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 12px;
+  font-weight: 600;
+  height: 30px;
+  padding: 0 15px;
+}
+
+.sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container .action-content{
+  display: block;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 80px rgb(0 0 0 / 7%), 0px 0px 10.0172px rgb(0 0 0 / 4%);
+  border-radius: 8px;
+  padding: 18px 0 15px 0;
+  margin-bottom: 15px
+}
+.sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container{
+  display: block;
 }
