--- a/findly-builder/src/app/components/traits/traits.component.html
+++ b/findly-builder/src/app/components/traits/traits.component.html
@@ -63,7 +63,7 @@
                     <div class="content-body row col-12 m-0" *ngFor="let traitGroup of  traits.traitGroups | traitsFilter:serachTraits; let index = index">
                         <div class="col-2 traitGroup-name" title="{{traitGroup.groupName || '---'}}">{{traitGroup.groupName || '---'}}</div>
                         <div class="col-8 traits-groups row m-0 align-items-center">
-                            <span *ngFor="let trait of traitGroup.traits| slice:0:3; let i=index;" class="trait-more">
+                            <span *ngFor="let trait of traitGroup.traits| slice:0:getTraitsSliceValue(traitGroup.traits); let i=index;" class="trait-more">
                                 {{i!==0 ?', ':''}}{{trait.traitName || '---'}}
                             </span>   
                             
@@ -83,16 +83,16 @@
 
                             </span>   -->
 
-                            <div class="kr-sg-dropdowns traits-more-data-container" ngbDropdown [placement]="'right-top'" *ngIf="traitGroup.traits.length>5">
+                            <div class="kr-sg-dropdowns traits-more-data-container" ngbDropdown [placement]="'right-top'" *ngIf="traitGroup.traits.length>getTraitsSliceValue(traitGroup.traits)">
                                 <div class="dropdown dropdown-open">
-                                    <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopPropagation()"> +{{traitGroup.traits.length-5}}</button>
+                                    <button class="dropdown-toggle dropdown-input" ngbDropdownToggle (click)="$event.stopPropagation()"> +{{traitGroup.traits.length-getTraitsSliceValue(traitGroup.traits)}}</button>
                                     <ul class="dropdown-menu content-menu traits-more-data-container-dropdown" ngbDropdownMenu>
                                        <div class="inner-content">
                                             <div class="close-dropdown">
                                                 <img src="assets/icons/close-dropdown.svg">
                                             </div>
                                             <perfect-scrollbar class="more-traits-scroll">
-                                                <li *ngFor="let trait of traitGroup.traits| slice:5:(traitGroup.traits.length);" title="{{trait.traitName || '---'}}" class="text-truncate">
+                                                <li *ngFor="let trait of traitGroup.traits| slice:getTraitsSliceValue(traitGroup.traits):(traitGroup.traits.length);" title="{{trait.traitName || '---'}}" class="text-truncate">
                                                     {{trait.traitName || '---'}}
                                                 </li>
                                             </perfect-scrollbar>
@@ -136,14 +136,14 @@
                     trait in the group from user utterances.
                     Example - 'vehicle type', 'device type'.
                 </p>
-                <input type="text" autocomplete="off" placeholder="Enter Trait Group" class="input-text" [(ngModel)]="traits.addEditTraits.groupName">
+                <input type="text" autocomplete="off" placeholder="Enter Trait Group" class="input-text" maxlength="120" [(ngModel)]="traits.addEditTraits.groupName">
             </div>
             <div class="kr-sg-input-text">
                 <div class="label-text">Traits</div>
                 <p class="text">Add one or more traits and provide the required training sentences. E.g. 'car',
                     'bus', 'modem', 'router'.
                 </p>
-                <input autocomplete="off" type="text" placeholder="Type & Enter To Add" class="input-text" #traitValue [(ngModel)]="add.traitName"
+                <input autocomplete="off" type="text" placeholder="Type & Enter To Add" class="input-text" maxlength="120" #traitValue [(ngModel)]="add.traitName"
                     (keyup.enter)="addTraits(add.traitName,$event)">
             </div>
             <div class="traits-group" *ngIf="traits.addEditTraits && traits.addEditTraits.traitsArray && traits.addEditTraits.traitsArray.length">
