--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -3053,3 +3053,9 @@ nouislider{
             }
         }        
 }
+.scroll-search-fiels-weights{
+    max-height: 350px;
+    .ps{
+        max-height: 350px;
+    }
+}
